--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -151,7 +151,7 @@
       <p>If you have any questions about this Privacy Policy, please contact us at:</p>
       <p class="contact-item">
         <strong>Email:</strong>
-        <a href="mailto:Nawartona02@gmail.com">Nawartona02@gmail.com</a>
+        <a href="mailto:Info.nawartona@gmail.com">Info.nawartona@gmail.com</a>
       </p>
       <p class="contact-item">
         <strong>Phone or WhatsApp:</strong>
