--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <div class="contact-card">
                 <p class="contact-item">
                     <span class="contact-label">Email Us:</span>
-                    <a href="mailto:Nawartona02@gmail.com" class="contact-link">Nawartona02@gmail.com</a>
+                    <a href="mailto:Info.nawartona@gmail.com" class="contact-link">Info.nawartona@gmail.com</a>
                 </p>
                 <p class="contact-item">
                     <span class="contact-label">Call or WhatsApp:</span>
