--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/logo_updated.ico">
     <link rel="icon" type="image/png" href="/logo_updated.png">
   </head>
   <body>
