--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="icon" type="image/x-icon" href="/logo_updated.ico">
-    <link rel="icon" type="image/png" href="/logo_updated.png">
+  <link rel="icon" type="image/x-icon" href="/logo_updated.ico">
+  <link rel="icon" type="image/png" sizes="64x64" href="/logo_updated.png">
+  <link rel="apple-touch-icon" sizes="64x64" href="/logo_updated.png">
   </head>
   <body>
     <nav class="navbar">
