--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,11 @@
     <title>Contact Nawartona</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="/logo_updated.ico">
+    <link rel="icon" type="image/png" sizes="64x64" href="/logo_updated.png">
+    <link rel="apple-touch-icon" sizes="64x64" href="/logo_updated.png">
+    <link rel="canonical" href="https://nawartona.online/contact">
+    
 </head>
 <body class="no-scroll">
     <nav class="navbar">
