--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -13,6 +13,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/logo_updated.ico">
+    <link rel="icon" type="image/png" sizes="64x64" href="/logo_updated.png">
+    <link rel="apple-touch-icon" sizes="64x64" href="/logo_updated.png">
+    <link rel="canonical" href="https://nawartona.online/Privacy_Policy.html">
+    
     <style>
       body {
         font-family: 'Roboto', sans-serif;
