--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="/logo_updated.ico">
     <link rel="icon" type="image/png" sizes="64x64" href="/logo_updated.png">
     <link rel="apple-touch-icon" sizes="64x64" href="/logo_updated.png">
-    <link rel="canonical" href="https://nawartona.online/contact">
+    <link rel="canonical" href="https://nawartona.online/contact.html">
     
 </head>
 <body class="no-scroll">
