--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex">
     <meta
       name="description"
       content="Privacy Policy for Nawartona: How we collect, use, and protect your data for event invitations."
