--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
       name="description"
       content="Learn about Nawartona, an automated event invitation system using WhatsApp Business API."
     />
+    <meta name="robots" content="noindex">
     <title>About Nawartona</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
