--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -7,6 +7,7 @@
       name="description"
       content="Privacy Policy for Nawartona: How we collect, use, and protect your data for event invitations."
     />
+    <meta name="robots" content="noindex">
     <title>Privacy Policy - Nawartona</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
